<resources>

    <string name="app_name">Snake</string>
    <string name="action_settings">Settings</string>
    <string name="title_snake_left">|</string>
    <string name="title_snake_middle"> SNAKE </string>
    <string name="title_snake_right">|</string>
    <string name="title_activity_class_snake">Classic Snake</string>
    <string name="title_activity_no_walls_snake">No Walls Snake</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_no_walls_score">No Walls Score</string>
    <string name="title_activity_classic_score">Classic Score</string>
    <string name="title_activity_bomb_snake">Bomb Snake</string>
    <string name="title_activity_bomb_score">Bomb Score</string>
    <string name="title_activity_classic_snake">Classic Snake</string>
    <string name="game_over">GAME OVER</string>

    <string name="current_score">Score: %1$d</string>
    <string name="high_score">High: %1$d</string>
    <string name="current_no_walls_score">Score: %1$d</string>
    <string name="high_no_walls_score">High: %1$d</string>

</resources>

