<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/snake_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.mgodevelopment.snake.MainMenu">

    <TextView
        android:id="@+id/snake_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/snake_left"
        android:layout_alignBottom="@+id/snake_left"
        android:layout_centerHorizontal="true"
        android:text="@string/title_snake_middle"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/snake_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="72dp"
        android:layout_toStartOf="@id/snake_middle"
        android:text="@string/title_snake_left"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/snake_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/snake_middle"
        android:layout_alignBottom="@id/snake_middle"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@id/snake_middle"
        android:text="@string/title_snake_right"
        android:textSize="25sp"/>

    <ImageView
        android:id="@+id/classic"
        android:contentDescription="@string/title_activity_classic_snake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/settings"
        android:layout_centerVertical="true"
        android:src="@mipmap/menu_options"/>

    <ImageView
        android:id="@+id/no_walls"
        android:contentDescription="@string/title_activity_no_walls_snake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bomb"
        android:layout_alignStart="@id/snake_middle"
        android:layout_marginStart="46dp"
        android:src="@mipmap/menu_options"/>

    <ImageView
        android:id="@+id/settings"
        android:contentDescription="@string/title_activity_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/classic"

        android:layout_toStartOf="@id/bomb"
        android:src="@mipmap/menu_options"/>

    <ImageView
        android:id="@+id/bomb"
        android:contentDescription="@string/title_activity_bomb_snake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/no_walls"
        android:layout_alignTop="@+id/settings"
        android:src="@mipmap/menu_options"/>

</RelativeLayout>